scenario-1/templates/frontoffice/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: scenario-1-app
  name: scenario-1-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    app: scenario-1-app
